--- a/README
+++ b/README
@@ -3,23 +3,23 @@ libfontenc
 Xorg font encoding library
 
 Runtime requirements:
-  cygwin-1.5.20-1
+  cygwin-1.5.22-1
   zlib-1.2.3-1
 
 Build requirements:
-  cygwin-1.5.20-1
-  autoconf2.5-2.59-2
+  cygwin-1.5.22-1
+  autoconf2.5-2.60-1
   automake1.9-1.9.6-1
-  binutils-20050610-1
-  cygport-0.2.2-1
+  binutils-20060817-1
+  cygport-0.2.6-1
   gawk-3.1.5-2
   gcc-core-3.4.4-1
-  libtool1.5-1.5.22-1
-  make-3.80-1
-  pkg-config-0.20-1
+  libtool1.5-1.5.23a-1
+  make-3.81-1
+  pkg-config-0.21-1
   sed-4.1.5-1
-  xorg-util-macros-1.0.2-1
-  xproto-7.0.7-1
+  xorg-util-macros-1.1.2-1
+  xproto-7.0.9-1
   zlib-1.2.3-1
 
 Canonical website:
@@ -31,36 +31,42 @@ Canonical download:
 -------------------------------------------
 
 Build instructions:
-  unpack libfontenc-1.0.2-X-src.tar.bz2
+  unpack libfontenc-1.0.3-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./libfontenc-1.0.2-X.cygport all
+  cygport ./libfontenc-1.0.3-X.cygport all
 
 This will create:
-  /usr/src/libfontenc-1.0.2-X-src.tar.bz2
-  /usr/src/libfontenc-1.0.2-X.tar.bz2
-  /usr/src/libfontenc1-1.0.2-X.tar.bz2
+  /usr/src/libfontenc-1.0.3-X-src.tar.bz2
+  /usr/src/libfontenc-1.0.3-X.tar.bz2
+  /usr/src/libfontenc-devel-1.0.3-X.tar.bz2
+  /usr/src/libfontenc1-1.0.3-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary package:
+Files included in the binary packages:
 
+(libfontenc)
+  /usr/share/doc/Cygwin/libfontenc-1.0.3.README
+  /usr/share/doc/libfontenc-1.0.3/COPYING
+  /usr/share/doc/libfontenc-1.0.3/ChangeLog
+
+(libfontenc1)
+  /usr/bin/cygfontenc-1.dll
+
+(libfontenc-devel)
   /usr/include/X11/fonts/fontenc.h
   /usr/lib/libfontenc.dll.a
   /usr/lib/libfontenc.la
   /usr/lib/pkgconfig/fontenc.pc
-  /usr/share/doc/Cygwin/libfontenc-1.0.2.README
-  /usr/share/doc/libfontenc-1.0.2/COPYING
-  /usr/share/doc/libfontenc-1.0.2/ChangeLog
-
-Files included in the runtime package:
-
-  /usr/bin/cygfontenc-1.dll
 
 ------------------
 
 Port Notes:
+
+----- version 1.0.3-1 -----
+X11R7.2 version bump.
 
 ----- version 1.0.2-1 -----
 X11R7.1 version bump.
