--- a/README
+++ b/README
@@ -1,25 +1,24 @@
 libfontenc
 ------------------------------------------
-Xorg font encoding library
+X.Org font encoding library
 
 Runtime requirements:
-  cygwin-1.5.24-2
+  cygwin-1.5.25-15
   zlib-1.2.3-2
 
 Build requirements:
-  cygwin-1.5.24-2
-  autoconf2.5-2.61-1
+  autoconf2.5-2.63-1
   automake1.9-1.9.6-2
-  binutils-20060817-1
-  cygport-0.3.5-1
-  gawk-3.1.5-4
+  binutils-20080624-2
+  cygport-0.4.2-1
+  gawk-3.1.6-1
   gcc-core-3.4.4-3
-  libtool1.5-1.5.23a-2
+  libtool-2.2.6a-1
   make-3.81-1
-  pkg-config-0.21-1
+  pkg-config-0.23a-2
   sed-4.1.5-2
-  xorg-util-macros-1.1.5-1
-  xproto-7.0.10-1
+  xorg-util-macros-1.1.6-1
+  xproto-7.0.14-1
   zlib-1.2.3-2
 
 Canonical website:
@@ -47,16 +46,14 @@ This will create:
 
 Files included in the binary packages:
 
-(libfontenc)
-  /usr/share/doc/Cygwin/libfontenc-1.0.4.README
+(libfontenc1)
+  /usr/bin/cygfontenc-1.dll
   /usr/share/doc/libfontenc-1.0.4/COPYING
   /usr/share/doc/libfontenc-1.0.4/ChangeLog
 
-(libfontenc1)
-  /usr/bin/cygfontenc-1.dll
-
 (libfontenc-devel)
   /usr/include/X11/fonts/fontenc.h
+  /usr/lib/libfontenc.a
   /usr/lib/libfontenc.dll.a
   /usr/lib/libfontenc.la
   /usr/lib/pkgconfig/fontenc.pc
@@ -64,6 +61,9 @@ Files included in the binary packages:
 ------------------
 
 Port Notes:
+
+----- version 1.0.4-2 -----
+Rebuilt.
 
 ----- version 1.0.4-1 -----
 X11R7.3 version bump.
