--- a/README
+++ b/README
@@ -3,23 +3,23 @@ libfontenc
 X.Org font encoding library
 
 Runtime requirements:
-  cygwin-1.5.25-15
-  zlib-1.2.3-2
+  cygwin-1.7.0-43
+  libgcc1-4.3.2-2
+  zlib0-1.2.3-10
 
 Build requirements:
-  autoconf2.5-2.63-1
-  automake1.9-1.9.6-2
+  autoconf2.5-2.63-10
+  automake1.9-1.9.6-10
   binutils-20080624-2
-  cygport-0.4.2-1
-  gawk-3.1.6-1
-  gcc-core-3.4.4-3
-  libtool-2.2.6a-1
-  make-3.81-1
+  cygport-0.9.6-1
+  gawk-3.1.6-2
+  gcc4-core-4.3.2-2
+  libtool-2.2.7a-1
+  make-3.81-2
   pkg-config-0.23a-2
   sed-4.1.5-2
-  xorg-util-macros-1.1.6-1
-  xproto-7.0.14-1
-  zlib-1.2.3-2
+  xorg-util-macros-1.2.1-1
+  xproto-7.0.15-1
 
 Canonical website:
   http://xorg.freedesktop.org/
@@ -48,8 +48,8 @@ Files included in the binary packages:
 
 (libfontenc1)
   /usr/bin/cygfontenc-1.dll
-  /usr/share/doc/libfontenc-1.0.4/COPYING
-  /usr/share/doc/libfontenc-1.0.4/ChangeLog
+  /usr/share/doc/libfontenc/COPYING
+  /usr/share/doc/libfontenc/ChangeLog
 
 (libfontenc-devel)
   /usr/include/X11/fonts/fontenc.h
@@ -62,20 +62,8 @@ Files included in the binary packages:
 
 Port Notes:
 
------ version 1.0.4-2 -----
-Rebuilt.
-
------ version 1.0.4-1 -----
-X11R7.3 version bump.
-
------ version 1.0.3-1 -----
-X11R7.2 version bump.
-
------ version 1.0.2-1 -----
-X11R7.1 version bump.
-
------ version 1.0.1-1 -----
-Initial Cygwin release of modular X11R7.0.
+----- version 1.0.4-10 -----
+Initial release for Cygwin 1.7.
 
 
 Cygwin port maintained by:
