--- a/README
+++ b/README
@@ -3,64 +3,51 @@ libfontenc
 X.Org font encoding library
 
 Runtime requirements:
-  cygwin-1.7.0-43
-  libgcc1-4.3.2-2
+  cygwin-1.7.0-62
+  libgcc1-4.3.4-1
   zlib0-1.2.3-10
 
 Build requirements:
   autoconf2.5-2.63-10
-  automake1.9-1.9.6-10
-  binutils-20080624-2
-  cygport-0.9.6-1
-  gawk-3.1.6-2
-  gcc4-core-4.3.2-2
-  libtool-2.2.7a-1
+  automake1.11-1.11-10
+  binutils-2.19.51-1
+  cygport-0.9.10-1
+  font-util-1.1.1-1
+  gawk-3.1.7-1
+  gcc4-core-4.3.4-1
+  libtool-2.2.7a-14
   make-3.81-2
-  pkg-config-0.23a-2
+  pkg-config-0.23b-10
   sed-4.1.5-2
-  xorg-util-macros-1.2.1-1
-  xproto-7.0.15-1
+  xorg-util-macros-1.3.0-1
+  xproto-7.0.16-1
 
 Canonical website:
   http://xorg.freedesktop.org/
 
 Canonical download:
-  http://xorg.freedesktop.org/releases/individual/
+  http://xorg.freedesktop.org/releases/individual/lib/
 
 -------------------------------------------
 
 Build instructions:
-  unpack libfontenc-1.0.4-X-src.tar.bz2
+  unpack libfontenc-1.0.5-X-src.tar.bz2
     if you use setup to install this src package, it will be
 	 unpacked under /usr/src automatically
   cd /usr/src
-  cygport ./libfontenc-1.0.4-X.cygport all
+  cygport ./libfontenc-1.0.5-X.cygport all
 
 This will create:
-  /usr/src/libfontenc-1.0.4-X-src.tar.bz2
-  /usr/src/libfontenc-1.0.4-X.tar.bz2
-  /usr/src/libfontenc-devel-1.0.4-X.tar.bz2
-  /usr/src/libfontenc1-1.0.4-X.tar.bz2
+  /usr/src/libfontenc-1.0.5-X-src.tar.bz2
+  /usr/src/libfontenc-devel-1.0.5-X.tar.bz2
+  /usr/src/libfontenc1-1.0.5-X.tar.bz2
 
 -------------------------------------------
 
-Files included in the binary packages:
-
-(libfontenc1)
-  /usr/bin/cygfontenc-1.dll
-  /usr/share/doc/libfontenc/COPYING
-  /usr/share/doc/libfontenc/ChangeLog
-
-(libfontenc-devel)
-  /usr/include/X11/fonts/fontenc.h
-  /usr/lib/libfontenc.a
-  /usr/lib/libfontenc.dll.a
-  /usr/lib/libfontenc.la
-  /usr/lib/pkgconfig/fontenc.pc
-
-------------------
-
 Port Notes:
+
+----- version 1.0.5-1 -----
+Version bump for X11R7.5.
 
 ----- version 1.0.4-10 -----
 Initial release for Cygwin 1.7.
